--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Developer Portfolio</title>
+
+    <!-- Font Familly-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
     <link rel ="stylesheet" href="style.css">
+    
 </head>
 <body>
-    <h1>This is first project again</h1>
+   <h1 class="black">Hi, I am</h1>
+   <h1 class="black-bold">Mary Hardy</h1>
     
 </body>
 </html>
