--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,12 +11,27 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
-    <link rel ="stylesheet" href="style.css">
-    
+    <link rel="stylesheet" href="style.css">
+
 </head>
+
 <body>
-   <h1 class="black">Hi, I am</h1>
-   <h1 class="black-bold">Mary Hardy</h1>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h4 class="black">Hi, I am</h4>
+            <h1 class="black-bold">Mary Hardy</h1>
+            <p clas="banner-para">Shot what able cold new see hold.Friendly as an betrayed formerly he.
+                Morning because as to society behaved moments.</p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/didar.vai.75">Download CV</a>
+        </div>
+
+        <div class="half-width">
+            <img src="images/header_bg.png">
+        </div>
+
+    </section>
+
+
 </body>
+
 </html>
